--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OpenEvents allows you to interact with events and members of a community.",
   "main": "app.js",
   "scripts": {
-    "prestart": "rm -r dist\\media &&rmdir dist\\media && mkdir dist\\media && copy .\\src\\media .\\dist\\media && npm run html-minifier && npm run css-minifier",
+    "prestart": "rm -r dist/media && cp -r ./src/media ./dist/media && npm run html-minifier && npm run css-minifier",
     "start": "node app.js",
     "html-minifier": "html-minifier --input-dir src --output-dir dist --file-ext html --remove-comments --collapse-whitespace --minify-js true --minify-css true",
     "css-minifier": "html-minifier --input-dir src --output-dir dist --file-ext css --remove-comments --collapse-whitespace --minify-js true --minify-css true"
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/superfer2002/OpenEvents#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "html-minifier": "^4.0.0",
     "nodemon": "^2.0.15"
   }
 }
