--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "OpenEvents allows you to interact with events and members of a community.",
   "main": "app.js",
   "scripts": {
-    "build": "rm -r dist/media && cp -r ./src/media ./dist/media && npm run html-minifier && npm run css-minifier",
+    "build-windows": "rmdir /Q /S dist\\media && mkdir dist\\media && xcopy /S /E .\\src\\media .\\dist\\media && npm run html-minifier && npm run css-minifier",
+    "build-mac": "rm -r dist/media && cp -r ./src/media ./dist/media && npm run html-minifier && npm run css-minifier",
     "start": "node app.js",
     "watch": "nodemon",
     "html-minifier": "html-minifier --input-dir src --output-dir dist --file-ext html --remove-comments --collapse-whitespace --minify-js true --minify-css true",
