--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-mac": "rm -r dist/media && cp -r ./src/media ./dist/media && npm run html-minifier && npm run css-minifier",
     "start": "node app.js",
     "watch": "nodemon",
+    "browser-reload": "browser-sync start --proxy \"localhost:3000\" --files dist/*",
     "html-minifier": "html-minifier --input-dir src --output-dir dist --file-ext html --remove-comments --collapse-whitespace --minify-js true --minify-css true",
     "css-minifier": "html-minifier --input-dir src --output-dir dist --file-ext css --remove-comments --collapse-whitespace --minify-js true --minify-css true"
   },
